--- a/Week 6/Day 1/monkeyface.css
+++ b/Week 6/Day 1/monkeyface.css
@@ -24,6 +24,7 @@ body{
     font-size: 100px;
     margin-left: 60px;
     margin-top: 20px;
+    display: none;
 }
 
 @media only screen and (min-width: 990px) {
